--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,14 +1,19 @@
 footer {
   padding: 2rem;
-  background-color: var(--overlay-background-color);
+  background-color: #084772;
   font-size: var(--body-font-size-s);
 }
 
 footer .footer {
-  max-width: 1200px;
+  width: 100%;
   margin: auto;
 }
 
 footer .footer p {
   margin: 0;
 }
+
+.footer-wrapper{
+  padding: 0px;
+}
+
