--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -11,14 +11,18 @@ main .hero-container {
 main .hero {
   position: relative;
   padding: 32px;
-  min-height: 300px;
+  min-height: 420px;
+  margin-bottom: 100px;
 }
 
 main .hero h1 {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 480px;
+  font-size: 1.8em;
+  font-weight: bold;
+  padding-top: 50px;
   color: white;
+  margin: auto;
+  padding-right: 500px;
 }
 
 main .hero picture {
@@ -37,3 +41,16 @@ main .hero img {
   width: 100%;
   height: 100%;
 }
+
+main .hero p {
+  color: white;
+  max-width: 480px;
+  font-weight: 0;
+  margin: auto;
+  padding-right: 500px;
+}
+
+.hero-wrapper {
+
+}
+
