--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,8 +1,8 @@
 
 .swiper {
-    padding-left: 79.5px;
-    padding-right: 79.5px;
-    width: 1000px;
+    margin-left: 79.5px;
+    margin-right: 79.5px;
+    width: 100%
 }
 
 .swiper-slide {
@@ -29,7 +29,7 @@
 .carousel-container {
     background-color: #CEDAE4;
     margin-top: 150px;
-    margin-bottom: 150px;
+    margin-bottom: 100px;
 }
 
 .swiper-pagination{
@@ -49,7 +49,6 @@
 .swiper-pagination-bullet {
     width: 10px!important;
     height: 10px!important;
-    text-align: center;
     line-height: 20px;
     font-size: 12px;
 }
